cambio paths default

--- a/wait-paths.html
+++ b/wait-paths.html
@@ -7,7 +7,7 @@
         color: '#a6bbcf',
         defaults: {
             name: {value:""},
-            paths: {value:'["path_1"]', required:true}//, validate: function(v) { if (JSON.parse(v)) return true } ;}
+            paths: {value:'["path_1","other_path"]', required:true}//, validate: function(v) { if (JSON.parse(v)) return true } ;}
         },
         inputs:1,
         outputs:1,
