--- a/wait-paths.html
+++ b/wait-paths.html
@@ -33,5 +33,5 @@
 </script>
 
 <script type="text/x-red" data-help-name="wait-paths">
-    <p>A simple node that converts the message payloads into all lower-case characters</p>
+    <p>Wait for incoming messages from diferent paths to generate a output message with the declared variables under msg.path merged. Each variable under msg.path should be initialized on a different input path</p>
 </script>
