--- a/wait-paths.html
+++ b/wait-paths.html
@@ -7,7 +7,9 @@
         color: '#a6bbcf',
         defaults: {
             name: {value:""},
-            paths: {value:'["path_1","other_path"]', required:true}//, validate: function(v) { if (JSON.parse(v)) return true } ;}
+            paths: {value:'["path_1","other_path"]', required:true},
+            timeout: {value:15000, validate:RED.validators.number()},
+            finalTimeout: {value:60000, validate:RED.validators.number()}
         },
         inputs:1,
         outputs:1,
@@ -25,6 +27,13 @@
 
         <label for="node-input-paths"><i class="icon-tag"></i> Paths</label>
         <input type="text" id="node-input-paths" placeholder="Paths">
+
+        <label for="node-input-timeout"><i class="icon-tag"></i> Timeout</label>
+        <input type="text" id="node-input-timeout" placeholder="Timeout">
+        
+        <label for="node-input-finalTimeout"><i class="icon-tag"></i> finalTimeout</label>
+        <input type="text" id="node-input-finalTimeout" placeholder="FinalTimeout">
+        
     </div>
     <div class="form-row node-input-rule-container-row">
         <ol id="node-input-rule-container"></ol>
@@ -33,8 +42,11 @@
 </script>
 
 <script type="text/x-red" data-help-name="wait-paths">
-    <p>Wait for incoming messages from diferent paths to generate only an output message with the declared variables under msg.path merged. Each variable under msg.path should be initialized on a different input path</p>
-    <p>The defined variables must respect the form msq.paths["variable_name"] = value or expression </p>
+    <p>Wait for incoming messages from diferent paths to generate only an output message with the declared variables under msg.paths merged. Each variable under msg.path corresponds with an input path, and should be initialized on a different input path</p>
+    <p>The defined variables must respect the form msq.paths["variable_name"] = value </p>
     <p>The variables are declared in field "paths" with a json string array. Ej: ["variable_name","variable_name2","path3","otherPath","etc"]. Warning! the json string is not validating yet.</p>
-
+    <p>The first path/variable in the json array is de main path. The imput message with this path is the base message to return when all imput messages arrived.</p>
+    <p>You can put an id in msg.paths_correlationId in the input messages to correlate them. By default uses msg._msgid as the correlationId.</p>
+    <p>You can set a timeout. if all messages are not arrived in this interval, from the reception of de first message, an error will be trow.</p>
+    <p>You can set a "final timeout". This interval defines when the auxiliary memory for a correlationId is released. This retain is to avoid duplicate trows of timeout errors when a message arrives after timeout.</p>
 </script>
