Corrijo form layout

--- a/wait-paths.html
+++ b/wait-paths.html
@@ -24,16 +24,18 @@
     <div class="form-row">
         <label for="node-input-name"><i class="icon-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
-
+    </div>
+    <div class="form-row">
         <label for="node-input-paths"><i class="icon-tag"></i> Paths</label>
         <input type="text" id="node-input-paths" placeholder="Paths">
-
+    </div>
+    <div class="form-row">
         <label for="node-input-timeout"><i class="icon-tag"></i> Timeout</label>
         <input type="text" id="node-input-timeout" placeholder="Timeout">
-        
+    </div>        
+    <div class="form-row">
         <label for="node-input-finalTimeout"><i class="icon-tag"></i> finalTimeout</label>
-        <input type="text" id="node-input-finalTimeout" placeholder="FinalTimeout">
-        
+        <input type="text" id="node-input-finalTimeout" placeholder="FinalTimeout">        
     </div>
     <div class="form-row node-input-rule-container-row">
         <ol id="node-input-rule-container"></ol>
