--- a/wait-paths.html
+++ b/wait-paths.html
@@ -7,7 +7,7 @@
         color: '#a6bbcf',
         defaults: {
             name: {value:""},
-            paths: {value:'["path_1","other_path"]', required:true},
+            pathsToWait: {value:'["path_1","other_path"]'},
             timeout: {value:15000, validate:RED.validators.number()},
             finalTimeout: {value:60000, validate:RED.validators.number()}
         },
@@ -26,8 +26,8 @@
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
     <div class="form-row">
-        <label for="node-input-paths"><i class="icon-tag"></i> Paths</label>
-        <input type="text" id="node-input-paths" placeholder="Paths">
+        <label for="node-input-pathsToWait"><i class="icon-tag"></i> PathsToWait</label>
+        <input type="text" id="node-input-pathsToWait" placeholder='["path_1","other_path"]'>
     </div>
     <div class="form-row">
         <label for="node-input-timeout"><i class="fa fa-clock-o"></i> Timeout</label>
@@ -44,11 +44,11 @@
 </script>
 
 <script type="text/x-red" data-help-name="wait-paths">
-    <p>Wait for incoming messages from diferent paths to generate only an output message with the declared variables under <code>msg.paths</code> merged. Each variable under <code>msg.paths</code> corresponds with an input path, and should be initialized on a different input path</p>
-    <p>The defined variables must respect the form <code>msg.paths["variable_name"] = value</code> </p>
-    <p>The variables are declared in configuration field <b>paths</b> with a json string array. Ej: ["variable_name","variable_name2","path3","otherPath","etc"]. Warning! the json string is not validating yet.</p>
-    <p>The first path/variable in the json array configured in field <b>paths</b> is de main path. The imput message with this path is the base message to return when all imput messages arrived.</p>
-    <p>You can put an id in <code>msg.paths_correlationId</code> in the input messages to correlate them. By default uses <code>msg._msgid</code> as the correlationId.</p>
+    <p>Wait for incoming messages from diferent paths to generate only an output message with the declared variables under <code>msg.paths</code> merged. Each variable under <code>msg.paths</code> corresponds with an input path, and should be initialized on a different input path.</p>
+    <p>The variables are declared in configuration field <b>PathsToWait</b> with a json string array. Ej: ["variable_name","variable_name2","path3","otherPath","etc"]. It can also be configured in execution time using <code>msg.pathsToWait</code> with the array of variables/paths names to wait.</p>
+    <p>Each input path must define its variable in an associative array (object) respecting the form <code>msg.paths["variable_name"] = value</code> </p>
+    <p>The first path/variable in the json array configured in field <b>PathsToWait</b> is de main path. The imput message with this path is the base message to return when all imput messages arrived.</p>
+    <p>You can put an id in <code>msg.pathsCorrelationId</code> in the input messages to correlate them. By default uses <code>msg._msgid</code> as the correlationId.</p>
     <p>You can configure a <b>timeout</b>. if all messages are not arrived in this interval, from the reception of de first message, an error will be trow.</p>
     <p>You can set a <b>final timeout</b>. This interval defines when the auxiliary memory for a correlationId is released. This retain is to avoid duplicate trows of timeout errors when a message arrives after timeout. This finalTimeut interval is greater than timeout.</p>
 </script>
